# market-intelligence-dashboard

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
archive/turtleos-phase1/: IMPLEMENTATION_PLAN.md  pyproject.toml
archive/turtleos-phase1/examples/: sample_ohlc.csv
archive/turtleos-phase1/outputs/: mt5-depth.json  phase1-final-decision-package.json  phase1-final-decision-package.md  phase1-in-sample-research-summary.json  phase1-in-sample-sweep-combined.csv  phase1-in-sample-sweep-per-symbol.csv  phase1-risk-control-summary.json  phase1-risk-control-sweep-combined.csv  phase1-risk-control-sweep-per-symbol.csv  phase1-walk-forward.csv  sample-backtest-report.json  xagusd-mt5-backtest.json  xauusd-mt5-backtest.json
archive/turtleos-phase1/outputs/candidate-comparison/: bootstrap-summary.csv  candidate-artifacts.csv  candidate-comparison-report.md  candidate-comparison-summary.json  candidate-ranking.csv  combined-metrics.csv  monte-carlo-summary.csv  per-symbol-metrics.csv  regime-summary.csv
archive/turtleos-phase1/outputs/oos-validation/: annual-returns.csv  combined-metrics.csv  degraded-rolling-periods.csv  equity.csv  in-sample-vs-oos.csv  monthly-returns.csv  (+7 more)
archive/turtleos-phase1/tests/: test_backtester.py  test_indicators.py  test_mt5_connection.py  test_research_validation.py  test_rules.py  test_sizing_and_fees.py
archive/turtleos-phase1/turtleos/: __init__.py  backtester.py  cli.py  config.py  fees.py  indicators.py  reporting.py  rules.py  sizing.py
(+217 files in other folders)
