[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "turtleos"
version = "0.1.0"
description = "TurtleOS Phase 1 rule engine and backtester"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.2.0"]
mt5 = ["MetaTrader5>=5.0.45"]

[tool.setuptools.packages.find]
include = ["turtleos*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
